# myrls

./: CMakeLists.txt  README.md
header/: file_manip.h  minor.h  primary.h  printers.h  structs.h
src/: file_manip.cpp  main.cpp  minor.cpp  primary.cpp  printers.cpp
